# BTB_extraction

./: .env.example  .gitignore  PyMuPDF-1.23.25-cp311-none-win_amd64.whl  README.md  notebook.ipynb  oracledb-2.0.1-cp311-cp311-win_amd64.whl  pyproject.toml  requirements.txt  review_landscape_stats (1).ipynb  run_pipeline.py  test.ipynb
Extractor/: BTB_version2020-2021.py  output_verification.py
src/: BTB_version2020-2021.py  cleaning.py  config.py  connexion.py  connexion_oracle.py
src/extraction/: 01.1_extraction_dwh_ARCHEMED.py  01_connexion.py  02.0_pdftotxt.py  02.search_btb_files.py  02_pdftotext_jarfile.py  03_pdftotext_jarfile.py  connexion.py  db_archemed.py  db_easily.py  filter_btb.py  pdf_to_text.py  pdftotxt.py  sandbox.ipynb
src/output/: viz.ipynb
src/structuration/: 01_BTB_LANDSCAPE.py  01_BTB_version2020-2021.py  02_cleaning.py  02_cleaning_LBA.py  03_output_verification.py  clean_btb.py  clean_lba.py  extract_btb.py  extractors.py  patterns.py  sandbox_cleaning_LBA.ipynb  site_value_counts.txt  value_counts.txt
whl_packages/: pyjnius-1.6.1-cp311-cp311-win_amd64.whl
